--- a/using k-means and DBSCAN.ipynb
+++ b/using k-means and DBSCAN.ipynb
@@ -444,16 +444,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# clusters: 19\n",
-      "clusters:  [{0, 2, 3, 135, 8, 137, 10, 11, 12, 141, 142, 14, 145, 19, 20, 22, 158, 30, 160, 162, 166, 39, 169, 170, 44, 48, 50, 52, 182, 184, 185, 186, 59, 190, 191, 63, 62, 67, 195, 69, 74, 87, 89, 98, 100, 101, 102, 105, 108, 116, 123, 124, 125}, {1, 164, 41, 28, 95}, {194, 131, 4, 68, 7, 104, 9, 174, 17, 181, 117, 159}, {5, 113, 51, 55, 126, 31}, {33, 18, 114, 25, 188}, {24, 81, 121}, {112, 146, 27}, {32, 144}, {176, 140, 34, 42}, {38, 143}, {43, 92}, {82, 45, 151}, {56, 115, 196}, {58, 189}, {130, 85}, {91, 139, 93}, {106, 171}, {120, 178}, {156, 183}]\n",
-      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 20]\n"
+      "# clusters: 144\n",
+      "clusters:  [{0, 12}, {1, 41}, {2, 69, 39, 137, 52, 20, 182, 87, 185, 30}, {3}, {4}, {113, 51, 5, 31}, {6}, {7}, {98, 67, 8, 11, 142, 14, 145, 116, 59}, {104, 9, 174, 17, 181, 117}, {101, 74, 10, 108, 170, 19, 123, 62}, {13}, {15}, {16}, {25, 18, 188, 114}, {21}, {105, 141, 22}, {23}, {24, 121}, {26}, {146, 27}, {28}, {29}, {32, 144}, {33}, {34}, {35}, {36}, {37}, {38, 143}, {40}, {176, 42}, {43}, {44}, {45}, {46}, {47}, {48}, {49}, {50}, {53}, {54}, {55}, {56, 115}, {57}, {58}, {60}, {61}, {63}, {64}, {65}, {66}, {68}, {70}, {71}, {72}, {73}, {75}, {76}, {77}, {78}, {79}, {80}, {81}, {82, 151}, {83}, {84}, {130, 85}, {86}, {88}, {89}, {90}, {91, 139, 93}, {92}, {94}, {95}, {96}, {97}, {99}, {100, 191}, {102}, {103}, {106, 171}, {107}, {109}, {110}, {111}, {112}, {118}, {119}, {120, 178}, {122}, {124}, {125}, {126}, {127}, {128}, {129}, {194, 131}, {132}, {133}, {134}, {135}, {136}, {138}, {140}, {147}, {148}, {149}, {150}, {152}, {153}, {154}, {155}, {156, 183}, {157}, {158}, {159}, {160, 195}, {161}, {162}, {163}, {164}, {165}, {166}, {167}, {168}, {184, 169}, {172}, {173}, {175}, {177}, {179}, {180}, {186}, {187}, {189}, {190}, {192}, {193}, {196}, {197}, {198}, {199}]\n",
+      "[  0   1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16  17\n",
+      "  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35\n",
+      "  36  37  38  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53\n",
+      "  54  55  56  57  58  59  60  61  62  63  64  65  66  67  68  69  70  71\n",
+      "  72  73  74  75  76  77  78  79  80  81  82  83  84  85  86  87  88  89\n",
+      "  90  91  92  93  94  95  96  97  98  99 100 101 102 103 104 105 106 107\n",
+      " 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125\n",
+      " 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143]\n"
      ]
     }
    ],
    "source": [
     "## The number of clusters vary depending upon the epss and minPts you pass\n",
-    "eps =0.6\n",
-    "minPts = 2\n",
+    "eps =0.5\n",
+    "minPts = 1\n",
     "d = MyDBSCAN(points, eps,minPts)\n",
     "with open(\"submission1.txt\", \"w\") as f:\n",
     "            for l in d:\n",
